[package]
name = "unspread"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.24.0"
csv = "1.3.0"
clap = { version = "4.5.4", features = ["derive"] }
directories = "5.0.1"
lazy-regex = "3.1.0"
regex = "1.10.2"
